--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:padding="16dp">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Coice Image"
-        android:id="@+id/choice_image"/>
+        android:id="@+id/choice_image" />
 
     <EditText
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="173dp"
+        android:layout_marginStart="63dp"
         android:layout_marginTop="677dp"
         android:layout_marginBottom="6dp"
         android:text="Upload" />
@@ -37,12 +38,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="117dp"
-        android:layout_marginTop="596dp"
+        android:layout_marginStart="177dp"
+        android:layout_marginTop="678dp"
         android:text="Show Uploads"
         android:textSize="30dp" />
 
     <ImageView
+        android:id="@+id/image_view"
         android:layout_width="407dp"
         android:layout_height="239dp"
         android:layout_alignParentStart="true"
@@ -51,6 +53,16 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd=""
         android:src="@mipmap/ic_launcher" />
+
+    <ProgressBar
+        android:id="@+id/Progres_Bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginBottom="68dp" />
 
 
 </RelativeLayout>
