--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,14 @@
 
     <Button
         android:id="@+id/upload_file"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="107dp"
+        android:layout_height="86dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="677dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="605dp"
+        android:layout_marginBottom="24dp"
         android:text="Upload" />
 
     <TextView
@@ -38,8 +38,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="177dp"
-        android:layout_marginTop="678dp"
+        android:layout_marginStart="227dp"
+        android:layout_marginTop="589dp"
         android:text="Show Uploads"
         android:textSize="30dp" />
 
@@ -60,8 +60,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginBottom="68dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginBottom="151dp" />
 
 
 </RelativeLayout>
