--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,49 +20,50 @@
         android:id="@+id/edittext"
         android:layout_marginStart="16dp"/>
 
-    <Button
-        android:id="@+id/upload_file"
-        android:layout_width="107dp"
-        android:layout_height="86dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="605dp"
-        android:layout_marginBottom="24dp"
-        android:text="Upload" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="227dp"
-        android:layout_marginTop="589dp"
-        android:text="Show Uploads"
-        android:textSize="30dp" />
-
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="407dp"
-        android:layout_height="239dp"
+        android:layout_width="376dp"
+        android:layout_height="258dp"
+        android:layout_below="@+id/edittext"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="39dp"
         android:src="@mipmap/ic_launcher" />
 
     <ProgressBar
         android:id="@+id/Progres_Bar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/upload_button"
+        android:layout_below="@+id/image_view"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="117dp"
+        android:layout_marginBottom="84dp" />
+
+    <Button
+        android:id="@+id/upload_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginBottom="151dp" />
+        android:layout_marginStart="106dp"
+        android:layout_marginBottom="92dp"
+        android:text="Upload" />
+
+    <TextView
+        android:id="@+id/upload_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="93dp"
+        android:text="Show Uploads"
+        android:textSize="24sp" />
 
 
 </RelativeLayout>
