--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,13 +35,11 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/upload_button"
-        android:layout_below="@+id/image_view"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="117dp"
-        android:layout_marginBottom="84dp" />
+        android:layout_marginStart="51dp"
+        android:layout_marginBottom="231dp" />
 
     <Button
         android:id="@+id/upload_button"
