--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
     <ProgressBar
         android:id="@+id/Progres_Bar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="395dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="51dp"
-        android:layout_marginBottom="231dp" />
+        android:layout_marginStart="9dp"
+        android:layout_marginBottom="166dp" />
 
     <Button
         android:id="@+id/upload_button"
